--- a/index.njk
+++ b/index.njk
@@ -1,14 +1,19 @@
 ---
-title: Title. Update me.
+title: Matt Wilkinson
 layout: layouts/home.njk
-description: Description. Update me.
+description: Hi, this is my personal website and might become a blog if I feel like writing.
 image: https://upload.wikimedia.org/wikipedia/en/a/a9/Example.jpg
 date: Last Modified
 ---
 
 <p>
-  This is a demo website based on 
-  <a href="https://www.industrialempathy.com/posts/eleventy-high-performance-blog/">eleventy-high-performance-blog</a>.
+  Hi, this is my personal website and might become a blog if I feel like writing.
+  We'll see how it goes.
+  <br><br>
+
+  I'm currently a Software Engineer at Roku.
+  <br>
+  I graduated from American University with a degree in Computer Science in 2021.
 </p>
 
 <div id="posts">
