--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 /* Color customization */
 :root {
-  --primary: #f9c412;
-  --primary-dark: #e7bf60;
+  --primary: #6096ba;
+  --primary-dark: #325871;
 }
 
 .test-dead-code-elimination-sentinel {
@@ -834,8 +834,8 @@ video {
 }
 body {
   font-family: var(--font-family);
-  background: #181818;
-  color: #eee;
+  background: #ffffff;
+  color: rgb(41, 41, 41);
 }
 section {
   margin-left: auto;
@@ -885,7 +885,8 @@ header nav {
   left: 0;
   width: 100vw;
   padding: 0.375em 1.5em;
-  background: hsla(0, 0%, 100%, 0.9);
+  background: #fff;
+  border-bottom: solid 1px rgba(41, 41, 41, 1);
   font-weight: 200;
   text-align: right;
 }
@@ -922,7 +923,7 @@ main {
   border-top: 0.5px solid #ccc;
 }
 footer {
-  background: rgba(0, 0, 0, 0.8);
+  background: rgb(240, 240, 240);
   color: #fff;
   padding: 3em;
   text-align: center;
