add og image for index

--- a/index.njk
+++ b/index.njk
@@ -2,7 +2,7 @@
 title: Matt Wilkinson
 layout: layouts/home.njk
 description: Hi, this is my personal website and might become a blog if I feel like writing.
-image: https://upload.wikimedia.org/wikipedia/en/a/a9/Example.jpg
+image: https://og-image.vercel.app/Matt%20Wilkinson.png
 date: Last Modified
 ---
 
