--- a/index.njk
+++ b/index.njk
@@ -11,7 +11,7 @@ date: Last Modified
   We'll see how it goes.
   <br><br>
 
-  I'm currently a Software Engineer at Roku.
+  I'm currently a Software Engineer at Google.
   <br>
   I graduated from American University with a degree in Computer Science in 2021.
 </p>
